# asm_corewar

asm/: CMakeLists.txt  Car.cor  Makefile  Makefile1  add_alist_back.c  add_arg_back.c  add_new_comand_asm_list.c  add_new_link_list.c  asm  asm.h  asm.txt  check_valid_comand.c  comand_asm_new_list.c  error_name_comment.c  inicializ_corewar.c  link_asm_new_list.c  main.c  new_list_asm.c  op.c  op.h  parse_one_line.c  parse_variables.c  read_cod_asm.c  str_split_arg.c  test.cor  test.s  toto.cor  toto.s
asm/includes/: asm.h  op.h  operation.h
asm/libft/: Makefile  ft_lstadd.c  ft_lstnew.c  ft_strdup.c  ft_strnew.c  ft_strsplit.c  get_next_line.c  libft.h  world.c
asm/source/: comand_asm_new_list.c  error_name_comment.c  free_all.c  link_asm_new_list.c  main.c  new_list_asm.c  parse_one_line.c  read_cod_asm.c  tags_and_links.c  write_to_file.c
asm_ver_2/Test/: errors.txt  script.sh  script_sgarry.sh
asm_ver_2/asm/: CMakeLists.txt  asm.txt
