cmake_minimum_required(VERSION 3.13)
project(asm C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(libft)

add_executable(asm
		libft/buf_right_alignment.c
		libft/buffer.c
		libft/buffer_2.c
		libft/count_numbers.c
		libft/ft_atoi.c
		libft/ft_atoi_precision.c
		libft/ft_atoi_width.c
		libft/ft_bzero.c
		libft/ft_char.c
		libft/ft_color_print.c
		libft/ft_count_until.c
		libft/ft_create_str.c
		libft/ft_float.c
		libft/ft_help_with_precision.c
		libft/ft_hex.c
		libft/ft_int.c
		libft/ft_isalnum.c
		libft/ft_isalpha.c
		libft/ft_isascii.c
		libft/ft_isdigit.c
		libft/ft_isprint.c
		libft/ft_itoa.c
		libft/ft_long_composition.c
		libft/ft_long_composition_dot.c
		libft/ft_long_division.c
		libft/ft_long_double.c
		libft/ft_long_pow.c
		libft/ft_long_pow_minus.c
		libft/ft_long_sum.c
		libft/ft_long_sum_dot.c
		libft/ft_make_precision.c
		libft/ft_memalloc.c
		libft/ft_memccpy.c
		libft/ft_memchr.c
		libft/ft_memcmp.c
		libft/ft_memcpy.c
		libft/ft_memdel.c
		libft/ft_memmove.c
		libft/ft_memset.c
		libft/ft_minus_str.c
		libft/ft_newtrim.c
		libft/ft_octal.c
		libft/ft_one.c
		libft/ft_point.c
		libft/ft_printf.c
		libft/ft_printf.h
		libft/ft_putchar.c
		libft/ft_putchar_fd.c
		libft/ft_putendl.c
		libft/ft_putendl_fd.c
		libft/ft_putnbr.c
		libft/ft_putnbr_fd.c
		libft/ft_putstr.c
		libft/ft_putstr_fd.c
		libft/ft_remake_str.c
		libft/ft_size.c
		libft/ft_strcat.c
		libft/ft_strchr.c
		libft/ft_strclr.c
		libft/ft_strcmp.c
		libft/ft_strcpy.c
		libft/ft_strdel.c
		libft/ft_strdup.c
		libft/ft_strequ.c
		libft/ft_striter.c
		libft/ft_striteri.c
		libft/ft_strjoin.c
		libft/ft_strlcat.c
		libft/ft_strlen.c
		libft/ft_strmap.c
		libft/ft_strmapi.c
		libft/ft_strncat.c
		libft/ft_strncmp.c
		libft/ft_strncpy.c
		libft/ft_strnequ.c
		libft/ft_strnew.c
		libft/ft_strnew_one.c
		libft/ft_strnew_zero.c
		libft/ft_strnstr.c
		libft/ft_strrchr.c
		libft/ft_strrjoin.c
		libft/ft_strsplit.c
		libft/ft_strstr.c
		libft/ft_strsub.c
		libft/ft_strtrim.c
		libft/ft_tolower.c
		libft/ft_toupper.c
		libft/ft_type_e.c
		libft/ft_type_e_l.c
		libft/ft_unsigned_int.c
		libft/ft_zero.c
		libft/get_after_dot_float.c
		libft/get_before_dot_float.c
		libft/get_next_line.c
		libft/inicialization.c
		libft/libft.h
		libft/long_world.c
		libft/norm_buffer.c
		libft/parser.c
		libft/parser_flag.c
		libft/parser_size.c
		libft/parser_type.c
		libft/print_percent.c
		libft/print_w_flag.c
		libft/quantity_world.c
		libft/reinicialization.c
		libft/until_per.c
		libft/what_print.c
		libft/world.c
		add_alist_back.c
		add_new_comand_asm_list.c
		add_new_link_list.c
		asm.h
		check_valid_comand.c
		comand_asm_new_list.c
		error_name_comment.c
		inicializ_corewar.c
		link_asm_new_list.c
		main.c
		new_list_asm.c
		op.h
		operation.h
		parse_one_line.c
		parse_variables.c
		read_cod_asm.c
		str_split_arg.c
		op.c
		add_arg_back.c)
